# c-programming-modern

./: CMakeLists.txt  README.md
array/: deal.c  interest.c  repdigit.c  reverse.c  reverse2.c
function/: average.c  countdown.c  prime.c  pun2.c
loop/: checking.c  numdigit.c  square.c  square2.c  square3.c  sum.c
operator/: upc.c
printf/: addfrac.c  tprintf.c
selection/: broker.c  date.c
type/: length.c  length2.c  sum2.c
